my_project/k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathaks-hostel-deployment
  labels:
    app: pathaks-hostel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pathaks-hostel
  template:
    metadata:
      labels:
        app: pathaks-hostel
    spec:
      containers:
      - name: pathaks-hostel-container
        # This is the image you just pushed to Docker Hub
        image: atrayeepathak/pathaks-hostel-distroless:latest 
        ports:
        - containerPort: 5000 # Updated to match your app.js port
